force-app/main/default/objects/Opportunity/fields/CotacaoDolarReferencia__c.field-meta.xml
<CustomField>
    <fullName>CotacaoDolarReferencia__c</fullName>
    <description>Cotação do dólar (USD) utilizada como referência na negociação — apenas informativo, sem cálculo automático vinculado (ver ADR 0002: v1 não terá motor de precificação automático via câmbio).</description>
    <label>Cotação Dólar de Referência</label>
    <precision>10</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>