force-app/main/default/objects/Opportunity/fields/IndicadorUrgencia__c.field-meta.xml
<CustomField>
    <fullName>IndicadorUrgencia__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Sinaliza problema com fornecedor atual do cliente — oportunidades inbound assim tendem a fechar mais rápido. Ver business-scenario.md.</description>
    <label>Indicador de Urgência</label>
    <type>Checkbox</type>
</CustomField>