force-app/main/default/objects/Opportunity/fields/LinhaDeProduto__c.field-meta.xml
<CustomField>
    <fullName>LinhaDeProduto__c</fullName>
    <label>Linha De Produto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cromatta</fullName>
            </value>
            <value>
                <fullName>Flexa</fullName>
            </value>
            <value>
                <fullName>Jato</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>