force-app/main/default/objects/Opportunity/fields/MotivoDaPerda__c.field-meta.xml
<CustomField>
    <fullName>MotivoDaPerda__c</fullName>
    <description>Obrigatório sempre que a Opportunity é fechada como Closed Lost (ver Validation Rule Motivo_Da_Perda_Obrigatorio). Ver business-scenario.md.</description>
    <label>Motivo da Perda</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preço Alto</fullName>
            </value>
            <value>
                <fullName>Prazo Curto</fullName>
            </value>
            <value>
                <fullName>Incompatibilidade Técnica</fullName>
            </value>
            <value>
                <fullName>Desistência por Demora</fullName>
            </value>
            <value>
                <fullName>Outro</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>