force-app/main/default/objects/Opportunity/fields/PossuiContratoRecorrente__c.field-meta.xml
<CustomField>
    <fullName>PossuiContratoRecorrente__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indica se esta Opportunity envolve compromisso de volume recorrente (contrato mensal) — mesma semântica de Account.PossuiContratoRecorrente__c (demanda-05), agora também na Opportunity, conforme architecture.md.</description>
    <label>Possui Contrato Recorrente</label>
    <type>Checkbox</type>
</CustomField>