force-app/main/default/objects/Opportunity/fields/PrecoFinal__c.field-meta.xml
<CustomField>
    <fullName>PrecoFinal__c</fullName>
    <description>Preço final negociado e aprovado da Oportunidade — preenchido manualmente pelo comercial após aprovação, sem cálculo automático via câmbio no v1 (ver ADR 0002 e business-scenario.md).</description>
    <label>Preço Final</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>