force-app/main/default/objects/Opportunity/fields/StatusAprovacaoDesconto__c.field-meta.xml
<CustomField>
    <fullName>StatusAprovacaoDesconto__c</fullName>
    <description>Atualizado automaticamente pelo Approval Process &quot;Aprovacao_Desconto_Oportunidade&quot; — Pendente ao submeter, Aprovado/Rejeitado ao final. A aprovação é sempre do Administrador Comercial (Gabriel Jacob), conforme business-scenario.md (&quot;aprovação final é sempre do cliente/dono da empresa&quot;). Ver demanda-11.</description>
    <label>Status da Aprovação de Desconto</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pendente</fullName>
            </value>
            <value>
                <fullName>Aprovado</fullName>
            </value>
            <value>
                <fullName>Rejeitado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>