force-app/main/default/objects/Opportunity/fields/VolumeMinimoMensal__c.field-meta.xml
<CustomField>
    <fullName>VolumeMinimoMensal__c</fullName>
    <description>Volume mínimo mensal negociado quando PossuiContratoRecorrente__c = true nesta Opportunity. Ver business-scenario.md.</description>
    <label>Volume Mínimo Mensal</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>