force-app/main/default/objects/Opportunity/recordTypes/Caminho_A_Produto_Existente.recordType-meta.xml
<RecordType>
    <fullName>Caminho_A_Produto_Existente</fullName>
    <active>true</active>
    <businessProcess>Caminho_A_Produto_Existente</businessProcess>
    <description>Produto já existe, custo conhecido — cota preço direto, envia amostra para validação do cliente, fecha ou perde. Ver business-scenario.md/BRD 3.4.1 e demanda-08.</description>
    <label>Caminho A - Produto Existente</label>
</RecordType>