force-app/main/default/objects/Opportunity/recordTypes/Caminho_B_Produto_Novo.recordType-meta.xml
<RecordType>
    <fullName>Caminho_B_Produto_Novo</fullName>
    <active>true</active>
    <businessProcess>Caminho_B_Produto_Novo</businessProcess>
    <description>Produto novo, sem custo definido — desenvolvimento interno primeiro, ciclos de amostra/teste com o cliente até funcionar, só então define preço e oferece. Ver business-scenario.md/BRD 3.4.1 e demanda-08.</description>
    <label>Caminho B - Produto Novo</label>
</RecordType>